--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js"
   },
   "engines": {
-    "node": ">=14  >=20"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
