--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mongoose": "^7.5.2",
     "nanoid": "^5.0.1",
     "nodemon": "^3.0.1",
-    "qrcode": "^1.5.3"
+    "proxy-addr": "^2.0.7",
+    "qrcode": "^1.5.3",
+    "request-ip": "^3.3.0"
   }
 }
