--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fingerprint": "^1.2.2",
     "express-rate-limit": "^7.1.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "nanoid": "^5.0.1",
     "nodemon": "^3.0.1",
-    "proxy-addr": "^2.0.7",
-    "qrcode": "^1.5.3",
-    "request-ip": "^3.3.0"
+    "qrcode": "^1.5.3"
   }
 }
